--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "bad-words": "^3.0.4",
-    "fs-extra": "^11.1.1"
+    "fs-extra": "^11.1.1",
+    "random-words": "^1.3.0"
   }
 }
