--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
     "bad-words": "^3.0.4",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
