--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,14 +1,21 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-    "version": "0.2.0",
     "configurations": [
+        
+        {
+            "name": "Launch Program",
+            "program": "${workspaceFolder}/backend-server.js",
+            "request": "launch",
+            "skipFiles": [
+                "<node_internals>/**"
+            ],
+            "type": "node"
+        },
+
         {
             "type": "chrome",
             "request": "launch",
-            "name": "Launch Chrome against localhost",
-            "url": "http://localhost:8080",
+            "name": "Launch Chrome against Heroku",
+            "url": "https://powerful-stream-53189.herokuapp.com/",
             "webRoot": "${workspaceFolder}"
         }
     ]
