--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "myapp",
   "version": "1.0.0",
+  "type": "module",
   "scripts": {
     "start": "node backend-server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
